--- a/ClustRepVAE.ipynb
+++ b/ClustRepVAE.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOoJLv/RgTx5POppWNRl1N5",
+      "authorship_tag": "ABX9TyPABLbj0LmcfKYQYoCle4TR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "source": [
         "# ClustRepVAE\n",
         "\n",
-        "ClustRep is a method for producing representations of clusters of high-dimensional data using a $\\beta$-VAE as a method for constructing disentangled latent gaussian representations of these clusters. The method uses moment matching to find the gaussian distribution that best captures sampling from the mixture model of members' latent distribution.\n",
+        "ClustRep is a method for producing representations of clusters of high-dimensional data using a $\\beta$-VAE as a method for constructing disentangled latent gaussian representations of these clusters. The method uses moment matching and/or results on the Wasserstein barycentres to find the gaussian distribution that best captures sampling from the mixture model of members' latent distribution.\n",
         "\n",
         "The demonstration below uses the well known MNIST, handwritten digits dataset."
       ],
