--- a/ClustRepVAE.ipynb
+++ b/ClustRepVAE.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPABLbj0LmcfKYQYoCle4TR",
+      "authorship_tag": "ABX9TyM6zQ5qjtN4kI0YSQEInGjM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1068,7 +1068,7 @@
         "$$\n",
         "\\textrm{Var}[\\hat{\\mathbf{X}}]=\\frac{1}{n^2}\\left[\\sum_{i=1}^{n} \\sigma^{1/2}\\right]^2.\n",
         "$$\n",
-        "Again, this result generalises to the multidimensional case due to the diagonal covariance matrices of the latent variables."
+        "Again, this result generalises to the multidimensional case due to the diagonal covariance matrices of the latent variables. In general, the method of moments approximation will have a larger variance than the barycentre method."
       ],
       "metadata": {
         "id": "9OXaaXJVb4DR"
